--- a/app/views/beobachtungen/_form.html.erb
+++ b/app/views/beobachtungen/_form.html.erb
@@ -23,13 +23,13 @@
           
           <div class="form-group">
             Standort bei der Beobachtung (z.B. Stadt oder Geokoordinaten): <br>
-            <%= f.text_field :ort, class: "form-control"  %><br>
+            <%= f.text_field :ort, placeholder:"z.B. Hamburg", class: "form-control"  %><br>
             Klicke auf die Karte, um den Standort genau einzutragen.
           </div>
   
           <div class="form-group">
             Fahrtrichtung des Transports (z.B. Himmelsrichtung oder nächste Ortschaft):<br>
-            <%= f.text_field :fahrtrichtung, class: "form-control" %>
+            <%= f.text_field :fahrtrichtung, placeholder:"z.B. Süden oder Buchholz", class: "form-control" %>
           </div>
           
           
@@ -91,11 +91,11 @@
           <div class="row">
             <div class="col-sm-4">
               Obere Nummer (zweistellig):
-              <%= f.text_field :gefahr_nummer, class: "form-control" %>
+              <%= f.text_field :gefahr_nummer, placeholder:"z.B. 78", class: "form-control" %>
             </div>
             <div class="col-sm-4">
               Untere Nummer (vierstellig):
-              <%= f.text_field :un_nummer, class: "form-control" %>
+              <%= f.text_field :un_nummer, placeholder:"z.B. 2978", class: "form-control" %>
             </div>
             <div class="col-sm-4">
               Beispiel:
@@ -130,13 +130,13 @@
         <div class="col-sm-9">
           <div class="form-group">
             Beschreibung der Container / Ladung (Farbe, Größe, Logos, Form, Gestelle, Container-Nummern):<br>
-            <%= f.text_area :container_beschreibung, class: "form-control" %>
+            <%= f.text_area :container_beschreibung, placeholder:"z.B. zylinderförmige graue Behälter, füllen Container nicht aus", class: "form-control" %>
           </div>
         </div>
         <div class="col-sm-3">
           <div class="form-group">
             Anzahl Container: <br>
-            <%= f.number_field :anzahl_container, class: "form-control", min:0 %>
+            <%= f.number_field :anzahl_container, placeholder:1, class: "form-control", min:0 %>
           </div>
         </div>
         
@@ -150,7 +150,7 @@
         <div class="beobachtung_zug">
           <div class="field">
             Beschreibung der Lok (Farbe, Aufschriften, Nummer, Eisenbahngesellschaft, Diesel oder elektrisch)
-            <%= f.text_field :lok_beschreibung, class: "form-control" %>
+            <%= f.text_field :lok_beschreibung, placeholder:"z.B. dunkelrot mit weißen Streifen, BE-24", class: "form-control" %>
           </div>
         </div>
         
@@ -158,13 +158,15 @@
           <div class="field">
             Beschreibung des Zuges (z.B. welche Wagen kommen im ganzen Zug vor, in welcher Reihenfolge, wo sind die Uranwagen positioniert,
             gibt es Graffiti, wie viele Waggons hat der Zug?)
-            <%= f.text_area :zug_beschreibung, class: "form-control" %>
+            <%= f.text_area :zug_beschreibung, 
+                placeholder:"z.B. die Uranwaggons kommen zuerst, dahinter ca. 30 Kesselwagen mit Gefahrgut, dann einige Waggons mit Holz", 
+                class: "form-control" %>
           </div>
         </div>
         <div class="beobachtung_lkw">
           <div class="field">
             Anzahl LKW:<br>
-            <%= f.number_field :anzahl_lkw, class: "form-control", min:0 %>
+            <%= f.number_field :anzahl_lkw, placeholer: 1, class: "form-control", min:0 %>
           </div>
           <div class="field">
             Auto-Kennzeichen der LKW:
@@ -172,7 +174,7 @@
           </div>
           <div class="field">
             Beschreibung des LKW (Fahrgestell, Farbe, Aufschrift):
-            <%= f.text_area :lkw_beschreibung, class: "form-control" %>
+            <%= f.text_area :lkw_beschreibung, placeholder:"z.B. grüner LKW mit Auflieger", class: "form-control" %>
           </div>
         </div>
         <div class="beobachtung_schiff">
@@ -182,13 +184,13 @@
           </div>
           <div class="field">
             Beschreibung des Schiffs (Größe, Aussehen, ...):
-            <%= f.text_area :schiff_beschreibung, class: "form-control" %>
+            <%= f.text_area :schiff_beschreibung, placeholder:"z.B. ca. 200m lang, rote Außenwand, nur 3 Container an Deck", class: "form-control" %>
           </div>
         </div>
         
         <div class="form-group">
           Transportfirma (Aufschrift der Reederei, Spedition, Bahnunternehmen):<br>
-          <%= f.text_field :firma_beschreibung, class: "form-control" %>
+          <%= f.text_field :firma_beschreibung, placeholder:"z.B. Kieserling", class: "form-control" %>
         </div>
       </div>
   </div>
@@ -212,6 +214,7 @@
                  
             <div class="field">     
               Weitere Beschreibung:
+              <%= f.text_area :begleitung_beschreibung, class: "form-control" %>
             </div>
         </div>
       </div>
@@ -225,8 +228,7 @@
     <div class="panel-body">       
         
         <div class="field">
-          <%= f.check_box :foto %> Foto gemacht? (Hochladen ermöglichen)
-          <%= file_field_tag 'upload_foto' %>
+          <%= f.check_box :foto %> Foto gemacht? (Nach der Eingabe der Beobachtung können Sie das Foto hochladen.)
         </div>
         <div class="field">
           E-Mail-Adresse für Nachfragen (freiwillige Angabe):
