Beobachtung: Link zu Upload

--- a/app/views/beobachtungen/_show_beschreibung.html.erb
+++ b/app/views/beobachtungen/_show_beschreibung.html.erb
@@ -102,6 +102,10 @@
             <p>
               Aufgenommen von: <%= beobachtung.foto_recht %>
             </p>
+          <% else %>
+            <p> 
+              <%= link_to "Foto hochladen", load_foto_beobachtung_path(beobachtung) %>
+            </p>
           <% end %>
 
         </div>
