Verknuepfung Beobachtungen und Transportabschnitte

--- a/app/views/beobachtungen/_show_eckdaten.html.erb
+++ b/app/views/beobachtungen/_show_eckdaten.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default" id="mapedit" >
     <div class="panel-heading">
-          <h2 class="panel-title">Eckdaten</h2>
+          <h2 class="panel-title"><%= titel ? titel : "Eckdaten" %></h2>
     </div>
     <div class="panel-body">
 			<div class="row">
