--- a/app/views/beobachtungen/_show_transportabschnitt.html.erb
+++ b/app/views/beobachtungen/_show_transportabschnitt.html.erb
@@ -6,11 +6,19 @@
 
 
         <% if @beobachtung.transportabschnitt %>
+        
           <h4>Zugeordneter Transport</h4>
+          
           <% if @beobachtung.transportabschnitt.transport %>
+            <div class="btn-group header-buttons">
+              <%= link_to 'Transport anzeigen', @beobachtung.transportabschnitt.transport, class: "btn btn-primary" %>
+            </div>
             <h4>Transportdaten</h4>
             <%= render "transporte/show_transport_grunddaten", transport: @beobachtung.transportabschnitt.transport %>
           <% end %>
+          <div class="btn-group header-buttons">
+              <%= link_to 'Transportabschnitt anzeigen', @beobachtung.transportabschnitt, class: "btn btn-primary" %>
+          </div>
           <h4>Transportabschnitt</h4>
           <%= render "transportabschnitte/show_abschnitt", :abschnitt => @beobachtung.transportabschnitt  %>
 
