--- a/app/views/beobachtungen/_eingabehilfe.html.erb
+++ b/app/views/beobachtungen/_eingabehilfe.html.erb
@@ -4,7 +4,7 @@
           <h1 class="panel-title">Eingabehilfe: Beobachtung</h1>
         </div>
         <div class="panel-body">
-          <%= render "beobachtungen/show_eckdaten", beobachtung: beobachtung %>
+          <%= render "beobachtungen/show_eckdaten", beobachtung: beobachtung, titel: "Ort und Zeit" %>
           <%= render "beobachtungen/show_beschreibung", beobachtung: beobachtung %>
         </div>
       </div>
