--- a/app/assets/stylesheets/transporte.css.scss
+++ b/app/assets/stylesheets/transporte.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the transporte controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.umschlag {
+  background-image: url('umschlag.svg');
+  background-position: left center;
+  background-repeat: no-repeat;
+  background-size: 50px auto;
+  height: 50px;
+  padding-left: 50px;
+  line-height: 50px;
+}
+
+.transportabschnitt {
+  background-image: url('transportabschnitt.svg');
+  background-position: left center;
+  background-repeat: repeat-y;
+  background-size: 50px auto;
+  min-height: 50px;
+  padding-left: 50px;
+}
