--- a/app/views/transporte/show.html.erb
+++ b/app/views/transporte/show.html.erb
@@ -4,42 +4,28 @@
 </div>
 <h1>Atomtransport</h1>
 
-<p id="notice"><%= notice %></p>
-
-
 <%= render "show_transport_grunddaten", transport: @transport %>
 
-
-<h3> Transportabschnitte </h3>
 <% if @transport.transportabschnitte.nil? || @transport.transportabschnitte.empty? %>
   Noch keine Transportabschnitte eingegeben.
   <%= link_to 'Neuer Transportabschnitt', new_transport_transportabschnitt_path(@transport) %> |
 <% else %>
-  <% @transport.transportabschnitte.each do |transport_abschnitt| %>
-    <div class="btn-group header-buttons">
-      <%= link_to 'Details anzeigen', transportabschnitt_path(transport_abschnitt) , class: "btn btn-primary" %>
-      <%= link_to 'Bearbeiten', edit_transportabschnitt_path(transport_abschnitt) , class: "btn btn-primary" %>  
-    </div>
-    <%= render "transportabschnitte/show_abschnitt", abschnitt: transport_abschnitt %>
+  <% umschlag_alt = nil; %>
+  <% @transport.transportabschnitte.order(:end_datum).each do |abschnitt| %>
+    
+    <% if ((umschlag = @transport.umschlaege.find_by ort: abschnitt.start_ort) && umschlag != umschlag_alt ) %>
+      <%= render "umschlaege/show_umschlag", umschlag: umschlag %>
+    <% end %>
+    
+    <%= render "transportabschnitte/show_abschnitt", abschnitt: abschnitt %>
+    
+    <% if (umschlag = @transport.umschlaege.find_by ort: abschnitt.end_ort) %>
+      <%= render "umschlaege/show_umschlag", umschlag: umschlag %>
+      <% umschlag_alt = umschlag %>
+    <% end %>
+    
   <% end %>
 <% end %>
-
-<h3> Umschläge </h3>
-<% if @transport.umschlaege.nil? || @transport.umschlaege.empty? %>
-  <p>
-    Kein Umschlag vorhanden.
-    <%= link_to 'Neuer Umschlag', new_transport_umschlag_path(@transport) %> 
-  </p>
-<% else %>
-  <% @transport.umschlaege.each do |umschlag| %>
-    <div class="btn-group header-buttons">
-      <%= link_to 'Details anzeigen', umschlag_path(umschlag) , class: "btn btn-primary" %>
-      <%= link_to 'Bearbeiten', edit_umschlag_path(umschlag) , class: "btn btn-primary" %>  
-    </div>
-    <%= render "umschlaege/show_umschlag", umschlag: umschlag %>
-  <% end %>
-<% end %>
-
 
   <%= link_to 'Neuer Transportabschnitt', new_transport_transportabschnitt_path(@transport) %> |
   <%= link_to 'Neuer Umschlag', new_transport_umschlag_path(@transport) %> |
