--- a/app/views/umschlaege/_show_umschlag.html.erb
+++ b/app/views/umschlaege/_show_umschlag.html.erb
@@ -1,26 +1,1 @@
-<h4> Umschlag in <%= umschlag.ort %></h4>
-<div class="row">
-  <div class="col-sm-6">
-    <p>
-      <strong>Firma:</strong>
-      <%= umschlag.firma %>
-    </p>
-  </div>
-    <p>
-      Terminal
-      <%= umschlag.terminal %>
-    </p>
-</div>
-<div class="row">
-  <div class="col-sm-6">
-    <p>
-      Ankunft:
-      <%= umschlag.start_datum %>
-    </p>
-
-    <p>
-      Abfahrt:
-      <%= umschlag.end_datum %>
-    </p>
-  </div>
-</div>
+<div class="umschlag"><%= link_to umschlag.ort, umschlag %></div>
