--- a/app/views/transportabschnitte/_show_abschnitt.html.erb
+++ b/app/views/transportabschnitte/_show_abschnitt.html.erb
@@ -10,5 +10,8 @@
   <% else %>
     Transport
   <% end %>
-  (<%= abschnitt.start_datum.strftime("%d.%m.%Y") %> – <%= abschnitt.end_datum.strftime("%d.%m.%Y") %>)
+  
+  <% if abschnitt.start_datum && abschnitt.end_datum %>
+    (<%= abschnitt.start_datum.strftime("%d.%m.%Y") %> – <%= abschnitt.end_datum.strftime("%d.%m.%Y") %>)
+  <% end %>
 </div>
