--- a/app/views/transportabschnitte/_show_abschnitt.html.erb
+++ b/app/views/transportabschnitte/_show_abschnitt.html.erb
@@ -8,10 +8,12 @@
   <% elsif abschnitt.verkehrstraeger == "Zug" %>
     Bahn-Transport
   <% else %>
-    Transport
+    Transport mit unbekanntem Verkehrsträger
   <% end %>
   
   <% if abschnitt.start_datum && abschnitt.end_datum %>
     (<%= abschnitt.start_datum.strftime("%d.%m.%Y") %> – <%= abschnitt.end_datum.strftime("%d.%m.%Y") %>)
   <% end %>
+  <%= link_to "Details", abschnitt %>
+
 </div>
