Beitrag zu #24, Bug bei Anlagen-Erstellung-Redirect

--- a/app/views/transporte/_form.html.erb
+++ b/app/views/transporte/_form.html.erb
@@ -1,55 +1,68 @@
 <%= form_for(@transport) do |f| %>
-  <% if @transport.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@transport.errors.count, "error") %> prohibited this transport from being saved:</h2>
-
-      <ul>
-      <% @transport.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :datum %><br>
-    <%= f.text_field :datum %>
-  </div>
-
-  <div class="field">
-    <%= f.label :start_anlage %><br>
-    <%= collection_select(:transport, :start_anlage_id, Anlage.all, :id, :name) %>
-  </div>
-  <div class="field">
-    <%= f.label :ziel_anlage %><br>
-    <%= collection_select(:transport, :ziel_anlage_id, Anlage.all, :id, :name) %>
-  </div>
-
- <div class="field">
-    <%= f.label :stoff %><br>
-    <%= collection_select(:transport, :stoff_id, Stoff.all, :id, :bezeichnung) %>
-  </div>
-  <div class="field">
-    <%= f.label :menge %><br>
-    <%= f.text_field :menge %>
-  </div>
- 
-  <div class="field">
-    <%= f.label :behaelter %><br>
-    <%= f.text_field :behaelter %>
-  </div>
+  <div class="panel panel-default" id="show_aehnliche_panel">
   
-  <div class="anzahl">
-    <%= f.label :anzahl %><br>
-    <%= f.text_field :anzahl %>
-  </div>
-  
-  <% if @beobachtung_id %>
-    <%= hidden_field_tag :beobachtung_id, @beobachtung_id %>
-  <% end %>
+      <div class="panel-heading">
+        <h2 class="panel-title">Neuen Transport eingeben</h2>
+      </div>
+      
+      <div class="panel-body">
 
 
-  <div class="actions">
-    <%= f.submit %>
+        <% if @transport.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@transport.errors.count, "error") %> prohibited this transport from being saved:</h2>
+
+            <ul>
+            <% @transport.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+            </ul>
+          </div>
+        <% end %>
+
+        <div class="field">
+          <%= f.label :datum %><br>
+          <%= f.text_field :datum %>
+        </div>
+
+        <div class="field">
+          Start-Anlage auswählen<br \>
+          <%= collection_select(:transport, :start_anlage_id, Anlage.all, :id, :name) %>
+          <%= link_to "Neue Anlage eingeben", new_anlage_path %>
+        </div>
+        <div class="field">
+          Ziel-Anlage auswählen<br \>
+          <%= collection_select(:transport, :ziel_anlage_id, Anlage.all, :id, :name) %>
+        </div>
+
+       <div class="field">
+          <%= f.label :stoff %><br>
+          <%= collection_select(:transport, :stoff_id, Stoff.all, :id, :bezeichnung) %>
+          <%= link_to "Neuen Stoff eingeben", new_stoff_path(redirect_params: new_transport_path)  %>
+        </div>
+        <div class="field">
+          <%= f.label :menge %><br>
+          <%= f.text_field :menge %>
+        </div>
+       
+        <div class="field">
+          <%= f.label :behaelter %><br>
+          <%= f.text_field :behaelter %>
+        </div>
+        
+        <div class="anzahl">
+          <%= f.label :anzahl %><br>
+          <%= f.text_field :anzahl %>
+        </div>
+        
+        <% if @beobachtung_id %>
+          <%= hidden_field_tag :beobachtung_id, @beobachtung_id %>
+        <% end %>
+
+
+        <div class="actions">
+          <%= f.submit %>
+        </div>
+      </div>
   </div>
 <% end %>
